--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require" : {
         "php": ">=5.4.24",
-        "campaignmonitor/createsend-php": "~4.0",
+        "campaignmonitor/createsend-php": "~5.0.1",
         "doctrine/common": "~2.2,>=2.2.3"
     },
     "autoload" : {
@@ -29,7 +29,7 @@
     }],
     "extra" : {
         "branch-alias" : {
-            "dev-master" : "1.0-dev"
+            "dev-master" : "1.0"
         }
     }
 }
